<resources>
    <string name="app_name">Fishpal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="term">I Agree to the <b><u>Terms of Service</u></b> and <b><u>Privacy Policy</u></b></string>
    <string name="agreeTerm">Please Agree to the <b><u>Terms of Service</u></b> and <b><u>Privacy Policy</u></b></string>
    <string name="loginText"><b><u>Login</u></b></string>
    <string name="registerText"><b><u>Register now</u></b></string>
    <string name="create_new_naccount">Create New\nAccount</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="verification_email_notif">Verification email has been sent to geegs@gmail.com</string>
    <string name="resend_code">Resend code in</string>
    <string name="one_minutes">1:00</string>
    <string name="resend_code_button">Resend Code</string>
    <string name="login">Login</string>
    <string name="verification_email_has_been_sent">Verification has been sent to your email</string>
    <string name="welcome_nback">Welcome\nBack</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="akun_pembeli">Akun Pembeli</string>
    <string name="akun_toko">Akun Toko</string>
    <string name="marketplace">Marketplace</string>
    <string name="community">Community</string>
    <string name="you_re_in_jakarta">You\'re in <b>Jakarta</b></string>
    <string name="ukuran_maksimum">Ukuran</string>
    <string name="perkiraan_nusia">Usia Maksimum</string>
    <string name="info_scan">Info Scan</string>
    <string name="toko">Toko</string>
    <string name="tambah_produk">Tambah Produk</string>
    <string name="harga_kg_rupiah">Harga/kg (rupiah)</string>
    <string name="nama_ikan">Nama Ikan</string>
    <string name="harga_ikan">Rp0</string>
    <string name="nama_toko">Nama Toko</string>
    <string name="keranjang_saya">Keranjang Saya</string>
    <string name="beli_sekarang">Beli Sekarang</string>
    <string name="_0">0</string>
    <string name="total">Total</string>
    <string name="rp0">Rp0</string>
    <string name="rp2000">Rp2000</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="alamat_pengiriman">Alamat Pengiriman</string>
    <string name="no_kartu_kredit">No. Kartu Kredit</string>
    <string name="jenis_pengiriman">Jenis Pengiriman</string>
    <string name="one_day_service">One Day Service</string>
    <string name="rp22_000">Rp22.000</string>
    <string name="rp35_000">Rp35.000</string>
    <string name="proses">Proses</string>
    <string name="biaya_keranjang">Biaya Keranjang</string>
    <string name="biaya_pengiriman">Biaya Pengiriman</string>
    <string name="_23_juni_2021">23 Juni 2021</string>
    <string name="pay_before">Lakukan pembayaran sebelum :\n%s</string>
    <string name="date_order">Dipesan : %s</string>
    <string name="total_waiting_payment">Total :\n%s</string>
    <string name="id_payment">ID Pembayaran :\n%s</string>
    <string name="no_credit_card">No. Kartu Kredit :\n%s</string>
    <string name="menunggu_pembayaran">Menunggu Pembayaran</string>
    <string name="bayar">Bayar</string>
    <string name="tanggal_dikirim">%s WIB</string>
    <string name="invoice">INV/%s</string>
    <string name="fromStore">Dibeli dari %s</string>
    <string name="list_order">Ikan Gurame (Toko Ikan Steve)\nIkan Lele (Toko Ikan Bryan)</string>
    <string name="total_payment">Total Pembayaran di Toko ini\n%s</string>
    <string name="pesanan_baru">Pesanan Baru</string>
    <string name="proses_sekarang">Proses Sekarang</string>
    <string name="pendapatan">Pendapatan Anda %s</string>
    <string name="daftar_produk">Daftar Produk</string>
    <string name="profile">Profile</string>
    <string name="welcome">Welcome</string>
    <string name="user_name">User Name</string>
    <string name="dateTime">05 Jan 2021, 10:20:21</string>
    <string name="akun">Akun</string>
    <string name="daftar_transaksi">Daftar Transaksi</string>
    <string name="transaksi_berlangsung">Transaksi Berlangsung</string>
    <string name="toko_ikan">Toko Ikan</string>
    <string name="daftar_produkmu">Daftar Produkmu</string>
    <string name="penjualan">Penjualan</string>
    <string name="tambah">TAMBAH</string>
    <string name="profil">Profil</string>
    <string name="alamat_lengkap">Alamat lengkap</string>
    <string name="tanggal_lahir">Tanggal lahir</string>
    <string name="kota_asal">Kota asal</string>
    <string name="nama_lengkap">Nama lengkap</string>
    <string name="perbarui_profil">Perbarui Profil</string>
    <string name="desc_thread">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam blandit sit mollis aliquet turpis augue tempus dictum. Id nec tortor neque bibendum ultrices. Egestas eu tortor hendrerit nascetur amet, malesuada eu.</string>
    <string name="desc_thread_mini">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="bagikan">Bagikan</string>
    <string name="buat_utasan">Buat utasan</string>
    <string name="desc_create_thread">Apa yang ada dalam pikiran Anda?</string>
    <string name="biaya_administrasi">Biaya Administrasi</string>
    <string name="biaya_admin">Biaya Admin 5% : %s</string>
    <string name="total_new_order">Total : %s</string>
    <string name="buka_toko">Buka Toko</string>
    <string name="masukkan_info_toko">Masukkan Info Toko</string>
    <string name="nama_toko_anda">Nama toko anda</string>
    <string name="kota_letak_toko_anda">Kota letak toko anda</string>
    <string name="upload_foto_ktp">Upload Foto KTP</string>
    <string name="foto_diri">Foto Diri</string>
    <string name="daftar_sekarang">Daftar Sekarang</string>
    <string name="anda_belum_mendaftarkan_toko_anda">Anda belum mendaftarkan toko anda</string>
    <string name="buka_toko_sekarang">Buka Toko Sekarang</string>
    <string name="max_umur">Max Umur</string>
    <string name="cari_di_toko">Cari di Toko</string>
    <string name="anda_belum_login">Anda belum login</string>

    //tvItemDate.text = itemView.resources.getString(R.string.deadline_date, course.deadline)

</resources>