<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blue_bright"
    android:layout_marginBottom="@dimen/indent_margin"
    android:paddingHorizontal="@dimen/indent_margin"
    android:paddingVertical="@dimen/main_margin">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_bright">

            <ImageView
                android:id="@+id/iv"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/shopping_bag"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/date_order"
                style="@style/formatFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/main_margin"
                android:text="@string/_23_juni_2021"
                android:textSize="@dimen/main_fontSize"
                app:layout_constraintStart_toEndOf="@+id/iv"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/pay_before"
                style="@style/formatFont"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_pay_before"
                android:padding="5dp"
                android:layout_marginTop="@dimen/main_margin"
                android:text="@string/pay_before"
                android:textAlignment="center"
                android:textSize="@dimen/main_fontSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_order" />

            <TextView
                android:id="@+id/total"
                style="@style/formatFont"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_margin"
                android:text="@string/total_waiting_payment"
                android:textSize="@dimen/main_fontSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/pay_before"
                app:layout_constraintTop_toBottomOf="@id/pay_before" />

            <TextView
                android:id="@+id/id_payment"
                style="@style/formatFont"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_margin"
                android:text="@string/id_payment"
                android:textSize="@dimen/main_fontSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/pay_before"
                app:layout_constraintTop_toBottomOf="@id/total" />

            <TextView
                android:id="@+id/id_credit_card"
                style="@style/formatFont"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_margin"
                android:text="@string/no_credit_card"
                android:textSize="@dimen/main_fontSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/pay_before"
                app:layout_constraintTop_toBottomOf="@id/id_payment" />

            <Button
                android:id="@+id/btn_pay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/main_margin"
                android:layout_marginTop="@dimen/indent_margin"
                android:background="@drawable/bg_field_button"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/bayar"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/id_credit_card"
                app:layout_constraintTop_toBottomOf="@id/id_credit_card" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>