<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/indent_margin">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_bright">

            <Button
                android:id="@+id/pesananDikirim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_field_button"
                android:clickable="false"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/pesanan_baru"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/ll1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/indent_margin"
                android:paddingVertical="@dimen/main_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pesananDikirim">

                <TextView
                    android:id="@+id/invoice"
                    style="@style/formatFont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/main_margin"
                    android:drawablePadding="@dimen/main_margin"
                    android:text="@string/invoice"
                    app:drawableStartCompat="@drawable/small_shoping_bag" />

                <TextView
                    android:id="@+id/produk_name"
                    style="@style/formatFont.semibold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawablePadding="@dimen/main_margin"
                    android:gravity="center_vertical"
                    android:text="@string/nama_ikan"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/pendapatan"
                    style="@style/formatFont.semibold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/main_margin"
                    android:drawablePadding="@dimen/main_margin"
                    android:gravity="center_vertical"
                    android:text="@string/pendapatan"
                    android:textSize="20sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_proses_sekarang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#0BCE83"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/proses_sekarang"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>