<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/indent_margin"    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_bright">

            <Button
                android:id="@+id/pesananDikirim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_field_button"
                android:clickable="false"
                android:fontFamily="@font/poppins_bold"
                android:text="Pesanan Dikirim"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/indent_margin"
                android:paddingVertical="@dimen/main_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pesananDikirim">

<!--                <TextView-->
<!--                    android:id="@+id/date_order_sent"-->
<!--                    style="@style/formatFont"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/tanggal_dikirim" />-->

                <TextView
                    android:id="@+id/invoice"
                    style="@style/formatFont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/main_margin"
                    android:text="@string/invoice" />

                <TextView
                    android:textSize="20sp"
                    android:id="@+id/produk_name"
                    style="@style/formatFont.semibold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginTop="20dp"
                    android:text="@string/list_order"
                    android:drawablePadding="@dimen/main_margin" />

                <TextView
                    android:id="@+id/fromStore"
                    style="@style/formatFont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/main_margin"
                    android:text="@string/fromStore" />

                <TextView
                    android:id="@+id/total_payment"
                    style="@style/formatFont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:layout_marginTop="20dp"
                    android:text="@string/total_payment" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>