<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main_ui.community.create_thread.CreateThreadFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/btn_back"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_baseline_close_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_marginEnd="15dp"
                    android:id="@+id/textView3"
                    style="@style/formatFont.semibold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buat_utasan"
                    android:textSize="@dimen/main_fontSize"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/share"
                    style="@style/formatFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/bagikan"
                    android:textSize="@dimen/main_fontSize"
                    android:layout_marginEnd="@dimen/main_margin"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_image"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="@dimen/indent_margin"
        android:layout_marginTop="@dimen/indent_margin"
        android:src="@drawable/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar" />

    <TextView
        android:id="@+id/user_name"
        style="@style/formatFont.semibold"
        android:layout_width="0dp"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/indent_margin"
        android:text="@string/user_name"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/civ_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/civ_image"
        app:layout_constraintTop_toTopOf="@+id/civ_image" />

    <EditText
        android:id="@+id/desc_create_thread"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/indent_margin"
        app:layout_constraintTop_toBottomOf="@id/civ_image"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins"
        android:background="@android:color/transparent"
        android:hint="@string/desc_create_thread"
        android:inputType="textMultiLine"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>